--- a/css/app.css
+++ b/css/app.css
@@ -10,6 +10,7 @@ a:hover {
 }
 
 #map {
+  width: 82%;
   height: 100%;
 }
 
@@ -18,10 +19,18 @@ a:hover {
 }
 
 #images {
-  width: 100%;
-  height: 100px;
+  background: #aaa;
+  width: 18%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  right: 0;
+  overflow: auto;
 }
 
 #images img {
-  max-height: 100px;
+  width: 100%;
+  margin: 5px;
+  border: solid 1px #ccc;
+
 }
