--- a/css/app.css
+++ b/css/app.css
@@ -29,9 +29,15 @@ a:hover {
 }
 
 #images img {
-  width: 100%;
-  margin: 5px;
-  border: solid 1px #ccc;
+  width: 96%;
+  margin: 0.3rem 0.3rem 0 0.3rem;
+  border: solid 2px #ccc;
+}
+
+#images p {
+  padding: 0.5rem;
+  margin: 0 0.4rem 0.1rem 0.3rem;
+  background: #ccc;
 }
 
 #error_msg {
